[package]
name = "vose-alias"
version = "1.0.0"
authors = ["Jennifer Renoux <jennifer.renoux@oru.se>"]
edition = "2018"
description = "An implementation of the Vose Alias method to sample according to a given discrete probablity distribution"
license-file = "LICENCE"
homepage = "https://github.com/jrenoux/vose-alias"
repository = "https://github.com/jrenoux/vose-alias"
readme = "README.md"
keywords = ["vose-alias", "sampling", "discrete probability distribution", "alias method"]
categories = ["algorithms", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "*"
rand = "*"